rlctbg/raylib.py


_rl.ImageDither.argtypes = [POINTER(Image), c_int, c_int, c_int, c_int]
_rl.ImageDither.restype = None
def image_dither(image: POINTER(Image), r_bpp: int, g_bpp: int, b_bpp: int, a_bpp: int) -> None:
    _rl.ImageDither(image, r_bpp, g_bpp, b_bpp, a_bpp)


_rl.ImageExtractPalette.argtypes = [Image, c_int, POINTER(c_int)]
_rl.ImageExtractPalette.restype = POINTER(Color)
def image_extract_palette(image: Image, max_palette_size: int, extract_count: POINTER(c_int)) -> POINTER(Color):
    return _rl.ImageExtractPalette(image, max_palette_size, extract_count)


_rl.ImageText.argtypes = [c_char_p, c_int, Color]
_rl.ImageText.restype = Image
def image_text(text: bytes, font_size: int, color: Color) -> Image:
    return _rl.ImageText(text, font_size, color)


_rl.ImageTextEx.argtypes = [Font, c_char_p, c_float, c_float, Color]
_rl.ImageTextEx.restype = Image
def image_text_ex(font: Font, text: bytes, font_size: float, spacing: float, tint: Color) -> Image:
    return _rl.ImageTextEx(font, text, font_size, spacing, tint)


_rl.ImageDraw.argtypes = [POINTER(Image), Image, Rectangle, Rectangle, Color]
_rl.ImageDraw.restype = None
def image_draw(dst: POINTER(Image), src: Image, src_rec: Rectangle, dst_rec: Rectangle, tint: Color) -> None:
    _rl.ImageDraw(dst, src, src_rec, dst_rec, tint)


_rl.ImageDrawRectangle.argtypes = [POINTER(Image), Rectangle, Color]
_rl.ImageDrawRectangle.restype = None
def image_draw_rectangle(dst: POINTER(Image), rec: Rectangle, color: Color) -> None:
    _rl.ImageDrawRectangle(dst, rec, color)


_rl.ImageDrawRectangleLines.argtypes = [POINTER(Image), Rectangle, c_int, Color]
_rl.ImageDrawRectangleLines.restype = None
def image_draw_rectangle_lines(dst: POINTER(Image), rec: Rectangle, thick: int, color: Color) -> None:
    _rl.ImageDrawRectangleLines(dst, rec, thick, color)


_rl.ImageDrawText.argtypes = [POINTER(Image), Vector2, c_char_p, c_int, Color]
_rl.ImageDrawText.restype = None
def image_draw_text(dst: POINTER(Image), position: Vector2, text: bytes, font_size: int, color: Color) -> None:
    _rl.ImageDrawText(dst, position, text, font_size, color)


_rl.ImageDrawTextEx.argtypes = [POINTER(Image), Vector2, Font, c_char_p, c_float, c_float, Color]
_rl.ImageDrawTextEx.restype = None
def image_draw_text_ex(dst: POINTER(Image), position: Vector2, font: Font, text: bytes, font_size: float, spacing: float, color: Color) -> None:
    _rl.ImageDrawTextEx(dst, position, font, text, font_size, spacing, color)


_rl.ImageFlipVertical.argtypes = [POINTER(Image)]
_rl.ImageFlipVertical.restype = None
def image_flip_vertical(image: POINTER(Image)) -> None:
    _rl.ImageFlipVertical(image)


_rl.ImageFlipHorizontal.argtypes = [POINTER(Image)]
_rl.ImageFlipHorizontal.restype = None
def image_flip_horizontal(image: POINTER(Image)) -> None:
    _rl.ImageFlipHorizontal(image)


_rl.ImageRotateCW.argtypes = [POINTER(Image)]
_rl.ImageRotateCW.restype = None
def image_rotate_cw(image: POINTER(Image)) -> None:
    _rl.ImageRotateCW(image)


_rl.ImageRotateCCW.argtypes = [POINTER(Image)]
_rl.ImageRotateCCW.restype = None
def image_rotate_ccw(image: POINTER(Image)) -> None:
    _rl.ImageRotateCCW(image)


_rl.ImageColorTint.argtypes = [POINTER(Image), Color]
_rl.ImageColorTint.restype = None
def image_color_tint(image: POINTER(Image), color: Color) -> None:
    _rl.ImageColorTint(image, color)


_rl.ImageColorInvert.argtypes = [POINTER(Image)]
_rl.ImageColorInvert.restype = None
def image_color_invert(image: POINTER(Image)) -> None:
    _rl.ImageColorInvert(image)


_rl.ImageColorGrayscale.argtypes = [POINTER(Image)]
_rl.ImageColorGrayscale.restype = None
def image_color_grayscale(image: POINTER(Image)) -> None:
    _rl.ImageColorGrayscale(image)


_rl.ImageColorContrast.argtypes = [POINTER(Image), c_float]
_rl.ImageColorContrast.restype = None
def image_color_contrast(image: POINTER(Image), contrast: float) -> None:
    _rl.ImageColorContrast(image, contrast)


_rl.ImageColorBrightness.argtypes = [POINTER(Image), c_int]
_rl.ImageColorBrightness.restype = None
def image_color_brightness(image: POINTER(Image), brightness: int) -> None:
    _rl.ImageColorBrightness(image, brightness)


_rl.ImageColorReplace.argtypes = [POINTER(Image), Color, Color]
_rl.ImageColorReplace.restype = None
def image_color_replace(image: POINTER(Image), color: Color, replace: Color) -> None:
    _rl.ImageColorReplace(image, color, replace)


_rl.GenImageColor.argtypes = [c_int, c_int, Color]
_rl.GenImageColor.restype = Image
def gen_image_color(width: int, height: int, color: Color) -> Image:
    return _rl.GenImageColor(width, height, color)


_rl.GenImageGradientV.argtypes = [c_int, c_int, Color, Color]
_rl.GenImageGradientV.restype = Image
def gen_image_gradient_v(width: int, height: int, top: Color, bottom: Color) -> Image:
    return _rl.GenImageGradientV(width, height, top, bottom)


_rl.GenImageGradientH.argtypes = [c_int, c_int, Color, Color]
_rl.GenImageGradientH.restype = Image
def gen_image_gradient_h(width: int, height: int, left: Color, right: Color) -> Image:
    return _rl.GenImageGradientH(width, height, left, right)


_rl.GenImageGradientRadial.argtypes = [c_int, c_int, c_float, Color, Color]
_rl.GenImageGradientRadial.restype = Image
def gen_image_gradient_radial(width: int, height: int, density: float, inner: Color, outer: Color) -> Image:
    return _rl.GenImageGradientRadial(width, height, density, inner, outer)


_rl.GenImageChecked.argtypes = [c_int, c_int, c_int, c_int, Color, Color]
_rl.GenImageChecked.restype = Image
def gen_image_checked(width: int, height: int, checks_x: int, checks_y: int, col1: Color, col2: Color) -> Image:
    return _rl.GenImageChecked(width, height, checks_x, checks_y, col1, col2)


_rl.GenImageWhiteNoise.argtypes = [c_int, c_int, c_float]
_rl.GenImageWhiteNoise.restype = Image
def gen_image_white_noise(width: int, height: int, factor: float) -> Image:
    return _rl.GenImageWhiteNoise(width, height, factor)


_rl.GenImagePerlinNoise.argtypes = [c_int, c_int, c_int, c_int, c_float]
_rl.GenImagePerlinNoise.restype = Image
def gen_image_perlin_noise(width: int, height: int, offset_x: int, offset_y: int, scale: float) -> Image:
    return _rl.GenImagePerlinNoise(width, height, offset_x, offset_y, scale)


_rl.GenImageCellular.argtypes = [c_int, c_int, c_int]
_rl.GenImageCellular.restype = Image
def gen_image_cellular(width: int, height: int, tile_size: int) -> Image:
    return _rl.GenImageCellular(width, height, tile_size)


_rl.GenTextureMipmaps.argtypes = [POINTER(Texture2D)]
_rl.GenTextureMipmaps.restype = None
def gen_texture_mipmaps(texture: POINTER(Texture2D)) -> None:
    _rl.GenTextureMipmaps(texture)


_rl.SetTextureFilter.argtypes = [Texture2D, c_int]
_rl.SetTextureFilter.restype = None
def set_texture_filter(texture: Texture2D, filter_mode: int) -> None:
    _rl.SetTextureFilter(texture, filter_mode)


_rl.SetTextureWrap.argtypes = [Texture2D, c_int]
_rl.SetTextureWrap.restype = None
def set_texture_wrap(texture: Texture2D, wrap_mode: int) -> None:
    _rl.SetTextureWrap(texture, wrap_mode)


_rl.DrawTexture.argtypes = [Texture2D, c_int, c_int, Color]
_rl.DrawTexture.restype = None
def draw_texture(texture: Texture2D, pos_x: int, pos_y: int, tint: Color) -> None:
    _rl.DrawTexture(texture, pos_x, pos_y, tint)


_rl.DrawTextureV.argtypes = [Texture2D, Vector2, Color]
_rl.DrawTextureV.restype = None
def draw_texture_v(texture: Texture2D, position: Vector2, tint: Color) -> None:
    _rl.DrawTextureV(texture, position, tint)


_rl.DrawTextureEx.argtypes = [Texture2D, Vector2, c_float, c_float, Color]
_rl.DrawTextureEx.restype = None
def draw_texture_ex(texture: Texture2D, position: Vector2, rotation: float, scale: float, tint: Color) -> None:
    _rl.DrawTextureEx(texture, position, rotation, scale, tint)


_rl.DrawTextureRec.argtypes = [Texture2D, Rectangle, Vector2, Color]
_rl.DrawTextureRec.restype = None
def draw_texture_rec(texture: Texture2D, source_rec: Rectangle, position: Vector2, tint: Color) -> None:
    _rl.DrawTextureRec(texture, source_rec, position, tint)


_rl.DrawTextureQuad.argtypes = [Texture2D, Vector2, Vector2, Rectangle, Color]
_rl.DrawTextureQuad.restype = None
def draw_texture_quad(texture: Texture2D, tiling: Vector2, offset: Vector2, quad: Rectangle, tint: Color) -> None:
    _rl.DrawTextureQuad(texture, tiling, offset, quad, tint)


_rl.DrawTexturePro.argtypes = [Texture2D, Rectangle, Rectangle, Vector2, c_float, Color]
_rl.DrawTexturePro.restype = None
def draw_texture_pro(texture: Texture2D, source_rec: Rectangle, dest_rec: Rectangle, origin: Vector2, rotation: float, tint: Color) -> None:
    _rl.DrawTexturePro(texture, source_rec, dest_rec, origin, rotation, tint)


_rl.DrawTextureNPatch.argtypes = [Texture2D, NPatchInfo, Rectangle, Vector2, c_float, Color]
_rl.DrawTextureNPatch.restype = None
def draw_texture_npatch(texture: Texture2D, n_patch_info: NPatchInfo, dest_rec: Rectangle, origin: Vector2, rotation: float, tint: Color) -> None:
    _rl.DrawTextureNPatch(texture, n_patch_info, dest_rec, origin, rotation, tint)


_rl.GetFontDefault.argtypes = []
_rl.GetFontDefault.restype = Font
def get_font_default() -> Font:
    return _rl.GetFontDefault()


_rl.LoadFont.argtypes = [c_char_p]
_rl.LoadFont.restype = Font
def load_font(file_name: bytes) -> Font:
    return _rl.LoadFont(file_name)


_rl.LoadFontEx.argtypes = [c_char_p, c_int, POINTER(c_int), c_int]
_rl.LoadFontEx.restype = Font
def load_font_ex(file_name: bytes, font_size: int, font_chars: POINTER(c_int), chars_count: int) -> Font:
    return _rl.LoadFontEx(file_name, font_size, font_chars, chars_count)


_rl.LoadFontFromImage.argtypes = [Image, Color, c_int]
_rl.LoadFontFromImage.restype = Font
def load_font_from_image(image: Image, key: Color, first_char: int) -> Font:
    return _rl.LoadFontFromImage(image, key, first_char)


_rl.LoadFontData.argtypes = [c_char_p, c_int, POINTER(c_int), c_int, c_int]
_rl.LoadFontData.restype = POINTER(CharInfo)
def load_font_data(file_name: bytes, font_size: int, font_chars: POINTER(c_int), chars_count: int, type: int) -> POINTER(CharInfo):
    return _rl.LoadFontData(file_name, font_size, font_chars, chars_count, type)


_rl.GenImageFontAtlas.argtypes = [POINTER(CharInfo), POINTER(POINTER(Rectangle)), c_int, c_int, c_int, c_int]
_rl.GenImageFontAtlas.restype = Image
def gen_image_font_atlas(chars: POINTER(CharInfo), recs: POINTER(POINTER(Rectangle)), chars_count: int, font_size: int, padding: int, pack_method: int) -> Image:
    return _rl.GenImageFontAtlas(chars, recs, chars_count, font_size, padding, pack_method)


_rl.UnloadFont.argtypes = [Font]
_rl.UnloadFont.restype = None
def unload_font(font: Font) -> None:
    _rl.UnloadFont(font)


_rl.DrawFPS.argtypes = [c_int, c_int]
_rl.DrawFPS.restype = None
def draw_fps(pos_x: int, pos_y: int) -> None:
    _rl.DrawFPS(pos_x, pos_y)


_rl.DrawText.argtypes = [c_char_p, c_int, c_int, c_int, Color]
_rl.DrawText.restype = None
def draw_text(text: bytes, pos_x: int, pos_y: int, font_size: int, color: Color) -> None:
    _rl.DrawText(text, pos_x, pos_y, font_size, color)


_rl.DrawTextEx.argtypes = [Font, c_char_p, Vector2, c_float, c_float, Color]
_rl.DrawTextEx.restype = None
def draw_text_ex(font: Font, text: bytes, position: Vector2, font_size: float, spacing: float, tint: Color) -> None:
    _rl.DrawTextEx(font, text, position, font_size, spacing, tint)


_rl.DrawTextRec.argtypes = [Font, c_char_p, Rectangle, c_float, c_float, c_bool, Color]
_rl.DrawTextRec.restype = None
def draw_text_rec(font: Font, text: bytes, rec: Rectangle, font_size: float, spacing: float, word_wrap: bool, tint: Color) -> None:
    _rl.DrawTextRec(font, text, rec, font_size, spacing, word_wrap, tint)


_rl.DrawTextCodepoint.argtypes = [Font, c_int, Vector2, c_float, Color]
_rl.DrawTextCodepoint.restype = None
def draw_text_codepoint(font: Font, codepoint: int, position: Vector2, scale: float, tint: Color) -> None:
    _rl.DrawTextCodepoint(font, codepoint, position, scale, tint)

